--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,9 +40,12 @@
      <Compile Include="Assets\Scripts\Properties\EmptyProperty.cs" />
      <Compile Include="Assets\Scripts\CasterUnit.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IMatcher.cs" />
+     <Compile Include="Assets\Scripts\SimpleSpellSlot.cs" />
+     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
      <Compile Include="Assets\Scripts\SimplePropertyContainer.cs" />
      <Compile Include="Assets\Scripts\RockUnit.cs" />
      <Compile Include="Assets\Scripts\Observable\IObservableObserver.cs" />
+     <Compile Include="Assets\Scripts\SimpleHighlighter.cs" />
      <Compile Include="Assets\Scripts\Observable\SimpleObservable.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IPropertyContainer.cs" />
      <Compile Include="Assets\Scripts\Observable\SimpleObserver.cs" />
@@ -50,14 +53,12 @@
      <Compile Include="Assets\Scripts\Properties\Force.cs" />
      <Compile Include="Assets\Scripts\Properties\Mass.cs" />
      <Compile Include="Assets\Scripts\Properties\Volume.cs" />
+     <Compile Include="Assets\Scripts\SimpleController.cs" />
      <Compile Include="Assets\Scripts\MyUiController.cs" />
      <Compile Include="Assets\Scripts\Properties\IProperty.cs" />
+     <Compile Include="Assets\Scripts\Properties\Limit.cs" />
      <Compile Include="Assets\Scripts\Observable\Unsubscriber.cs" />
      <Compile Include="Assets\Scripts\Interfaces\ISpellSlot.cs" />
-     <Compile Include="Assets\Scripts\SimpleController.cs" />
-     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
-     <Compile Include="Assets\Scripts\SimpleClickSelector.cs" />
-     <Compile Include="Assets\Scripts\SimpleSpellSlot.cs" />
      <None Include="Assets\UI\MyUi.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
     <Reference Include="UnityEngine">
