--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,6 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Units\RockUnit.cs" />
      <Compile Include="Assets\Scripts\Interfaces\ITargetedProperty.cs" />
      <Compile Include="Assets\Scripts\Properties\EmptyProperty.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IMatcher.cs" />
@@ -45,6 +46,7 @@
      <Compile Include="Assets\Scripts\Observable\IObservableObserver.cs" />
      <Compile Include="Assets\Scripts\SimpleHighlighter.cs" />
      <Compile Include="Assets\Scripts\Observable\SimpleObservable.cs" />
+     <Compile Include="Assets\Scripts\Units\CasterUnit.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IPropertyContainer.cs" />
      <Compile Include="Assets\Scripts\Observable\SimpleObserver.cs" />
      <Compile Include="Assets\Scripts\Properties\Density.cs" />
@@ -57,8 +59,7 @@
      <Compile Include="Assets\Scripts\Properties\Limit.cs" />
      <Compile Include="Assets\Scripts\Observable\Unsubscriber.cs" />
      <Compile Include="Assets\Scripts\Interfaces\ISpellSlot.cs" />
-     <Compile Include="Assets\Scripts\Units\RockUnit.cs" />
-     <Compile Include="Assets\Scripts\Units\CasterUnit.cs" />
+     <Compile Include="Assets\Scripts\MouseController.cs" />
      <None Include="Assets\UI\MyUi.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
     <Reference Include="UnityEngine">
