--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,6 +43,8 @@
      <Compile Include="Assets\Scripts\SimpleSpellSlot.cs" />
      <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
      <Compile Include="Assets\Scripts\SimplePropertyContainer.cs" />
+     <Compile Include="Assets\Scripts\MouseController.cs" />
+     <Compile Include="Assets\Scripts\Units\TreeUnit.cs" />
      <Compile Include="Assets\Scripts\Observable\IObservableObserver.cs" />
      <Compile Include="Assets\Scripts\SimpleHighlighter.cs" />
      <Compile Include="Assets\Scripts\Observable\SimpleObservable.cs" />
@@ -59,7 +61,10 @@
      <Compile Include="Assets\Scripts\Properties\Limit.cs" />
      <Compile Include="Assets\Scripts\Observable\Unsubscriber.cs" />
      <Compile Include="Assets\Scripts\Interfaces\ISpellSlot.cs" />
-     <Compile Include="Assets\Scripts\MouseController.cs" />
+     <Compile Include="Assets\Scripts\Properties\Health.cs" />
+     <Compile Include="Assets\Scripts\LiveController.cs" />
+     <Compile Include="Assets\Scripts\Units\LogUnit.cs" />
+     <Compile Include="Assets\Scripts\Properties\Durability.cs" />
      <None Include="Assets\UI\MyUi.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
     <Reference Include="UnityEngine">
