Remove obsolete code

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,45 +36,18 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Units\RockUnit.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\ITargetedProperty.cs" />
-     <Compile Include="Assets\Scripts\Properties\EmptyProperty.cs" />
-     <Compile Include="Assets\Scripts\Units\LogUnit.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\IMatcher.cs" />
-     <Compile Include="Assets\Scripts\SimpleSpellSlot.cs" />
-     <Compile Include="Assets\Scripts\SimpleCameraController.cs" />
-     <Compile Include="Assets\Scripts\SimplePropertyContainer.cs" />
      <Compile Include="Assets\Scripts\Properties\TemperatureField.cs" />
-     <Compile Include="Assets\Scripts\MouseController.cs" />
-     <Compile Include="Assets\Scripts\Units\TreeUnit.cs" />
      <Compile Include="Assets\Scripts\Properties\Temperature.cs" />
-     <Compile Include="Assets\Scripts\Observable\IObservableObserver.cs" />
-     <Compile Include="Assets\Scripts\SimpleHighlighter.cs" />
-     <Compile Include="Assets\Scripts\Observable\SimpleObservable.cs" />
-     <Compile Include="Assets\Scripts\LiveController.cs" />
-     <Compile Include="Assets\Scripts\Units\CasterUnit.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\IPropertyContainer.cs" />
-     <Compile Include="Assets\Scripts\Observable\SimpleObserver.cs" />
      <Compile Include="Assets\Scripts\Properties\Density.cs" />
-     <Compile Include="Assets\Scripts\Properties\Force.cs" />
      <Compile Include="Assets\Scripts\Properties\Mass.cs" />
      <Compile Include="Assets\Scripts\Properties\Volume.cs" />
-     <Compile Include="Assets\Scripts\SimpleController.cs" />
-     <Compile Include="Assets\Scripts\MyUiController.cs" />
-     <Compile Include="Assets\Scripts\Properties\IProperty.cs" />
-     <Compile Include="Assets\Scripts\Properties\Limit.cs" />
-     <Compile Include="Assets\Scripts\Observable\Unsubscriber.cs" />
      <Compile Include="Assets\Scripts\Properties\Durability.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\ISpellSlot.cs" />
-     <Compile Include="Assets\Scripts\Properties\Health.cs" />
-     <Compile Include="Assets\Scripts\TempField.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\ITempNode.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\IMesh.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\TempNode.cs" />
-     <Compile Include="Assets\Scripts\Burnable.cs" />
-     <Compile Include="Assets\Scripts\TemperatureV2.cs" />
-     <Compile Include="Assets\Scripts\TemperatureFieldV3.cs" />
-     <Compile Include="Assets\Scripts\Humidity.cs" />
+     <Compile Include="Assets\Scripts\Properties\Humidity.cs" />
+     <Compile Include="Assets\Scripts\Properties\Fuel.cs" />
+     <Compile Include="Assets\Scripts\UI\PlayerCameraController.cs" />
+     <Compile Include="Assets\Scripts\UI\PlayerMoveController.cs" />
+     <Compile Include="Assets\Scripts\UI\PlayerJumpController.cs" />
+     <Compile Include="Assets\Scripts\UI\SelectionHighlightController.cs" />
      <None Include="Assets\UI\MyUi.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
     <Reference Include="UnityEngine">
