--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,7 @@
      <Compile Include="Assets\Scripts\Properties\TemperatureField.cs" />
      <Compile Include="Assets\Scripts\Properties\Humidity.cs" />
      <Compile Include="Assets\Scripts\Properties\Mass.cs" />
-     <Compile Include="Assets\Scripts\ShowOnlyAttribute.cs" />
+     <Compile Include="Assets\Scripts\ReadOnlyPropertyAttribute.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
