--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,9 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
+    },
+    "files.associations": {
+        "*.uss": "css",
+        "*.uxml": "xml"
     }
 }
