--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.26",
+    "com.unity.ui": "1.0.0-preview.14",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
