--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,14 +43,16 @@
      <Compile Include="Assets\Scripts\UI\PlayerCameraController.cs" />
      <Compile Include="Assets\Scripts\Properties\Density.cs" />
      <Compile Include="Assets\Scripts\Properties\Mass.cs" />
+     <Compile Include="Assets\Scripts\Properties\MassSkill.cs" />
      <Compile Include="Assets\Scripts\UI\PlayerJumpController.cs" />
      <Compile Include="Assets\Scripts\Properties\TemperatureField.cs" />
      <Compile Include="Assets\Scripts\UI\PlayerMoveController.cs" />
      <Compile Include="Assets\Scripts\Properties\Fuel.cs" />
      <Compile Include="Assets\Scripts\Properties\Durability.cs" />
      <Compile Include="Assets\Scripts\GUI\TargetPanel.cs" />
-     <Compile Include="Assets\Scripts\UI\SkillController.cs" />
-     <Compile Include="Assets\Scripts\Properties\MassSkill.cs" />
+     <Compile Include="Assets\Scripts\UI\SkillsProvider.cs" />
+     <Compile Include="Assets\Scripts\Properties\DensitySkill.cs" />
+     <Compile Include="Assets\Scripts\Caster.cs" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uss" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
