--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\Scripts\Properties\VolumeSkill.cs" />
      <Compile Include="Assets\Scripts\Properties\FuelSkill.cs" />
      <Compile Include="Assets\Scripts\Properties\TemperatureSkill.cs" />
+     <Compile Include="Assets\Scripts\Properties\ElasticResistance.cs" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uss" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
