Add break inheritance and volume

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,8 @@
      <Compile Include="Assets\Scripts\Properties\FuelSkill.cs" />
      <Compile Include="Assets\Scripts\Properties\TemperatureSkill.cs" />
      <Compile Include="Assets\Scripts\Properties\ElasticResistance.cs" />
+     <Compile Include="Assets\Scripts\IBreakableInheritance.cs" />
+     <Compile Include="Assets\Scripts\TreeBreakableInheritance.cs" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uss" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
