--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,38 +37,44 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Properties\Temperature.cs" />
+     <Compile Include="Assets\Scripts\GUI\ComponentPicker.cs" />
+     <Compile Include="Assets\Scripts\Properties\ElasticResistance.cs" />
      <Compile Include="Assets\Scripts\UI\SelectionHighlightController.cs" />
      <Compile Include="Assets\Scripts\Properties\Humidity.cs" />
      <Compile Include="Assets\Scripts\ReadOnlyPropertyAttribute.cs" />
+     <Compile Include="Assets\Scripts\DestroyableBreakable.cs" />
      <Compile Include="Assets\Scripts\UI\PlayerCameraController.cs" />
+     <Compile Include="Assets\Scripts\IBreakable.cs" />
      <Compile Include="Assets\Scripts\Properties\Density.cs" />
      <Compile Include="Assets\Scripts\Properties\Mass.cs" />
-     <Compile Include="Assets\Scripts\Properties\MassSkill.cs" />
+     <Compile Include="Assets\Scripts\GUI\ComponentControl.cs" />
+     <Compile Include="Assets\Scripts\Caster.cs" />
      <Compile Include="Assets\Scripts\UI\PlayerJumpController.cs" />
      <Compile Include="Assets\Scripts\Properties\TemperatureField.cs" />
      <Compile Include="Assets\Scripts\UI\PlayerMoveController.cs" />
      <Compile Include="Assets\Scripts\Properties\Fuel.cs" />
      <Compile Include="Assets\Scripts\Properties\Durability.cs" />
      <Compile Include="Assets\Scripts\GUI\TargetPanel.cs" />
-     <Compile Include="Assets\Scripts\SkillsProvider.cs" />
-     <Compile Include="Assets\Scripts\Properties\DensitySkill.cs" />
-     <Compile Include="Assets\Scripts\Caster.cs" />
-     <Compile Include="Assets\Scripts\GUI\ComponentPicker.cs" />
-     <Compile Include="Assets\Scripts\GUI\ComponentControl.cs" />
-     <Compile Include="Assets\Scripts\IRenderable.cs" />
-     <Compile Include="Assets\Scripts\Properties\DurabilitySkill.cs" />
-     <Compile Include="Assets\Scripts\Properties\HumiditySkill.cs" />
-     <Compile Include="Assets\Scripts\Properties\VolumeSkill.cs" />
-     <Compile Include="Assets\Scripts\Properties\FuelSkill.cs" />
-     <Compile Include="Assets\Scripts\Properties\TemperatureSkill.cs" />
-     <Compile Include="Assets\Scripts\Properties\ElasticResistance.cs" />
-     <Compile Include="Assets\Scripts\IBreakable.cs" />
      <Compile Include="Assets\Scripts\TreeBreakable.cs" />
-     <Compile Include="Assets\Scripts\DestroyableBreakable.cs" />
+     <Compile Include="Assets\Scripts\SkillsProvider.cs" />
+     <Compile Include="Assets\Scripts\Skills\IScalarPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\DurabilityPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\VolumePower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\FuelPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\DensityPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\HumidityPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\MassPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\Power\TemperaturePower.cs" />
+     <Compile Include="Assets\Scripts\Properties\interface\IScalarProperty.cs" />
+     <Compile Include="Assets\Scripts\Skills\IMassSkill.cs" />
+     <Compile Include="Assets\Scripts\Skills\CategorizedSkills.cs" />
+     <Compile Include="Assets\Scripts\Skills\ScalarSkill.cs" />
+     <Compile Include="Assets\Scripts\GUI\ScalarSkillControllerBuilder.cs" />
+     <Compile Include="Assets\Scripts\GUI\VisualAssetRegistry.cs" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uss" />
      <None Include="Assets\Scripts\GUI\TargetPanel.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
-     <None Include="Assets\Scripts\GUI\ComponentControl.uxml" />
+     <None Include="Assets\Scripts\GUI\ScalarComponentController.uxml" />
      <None Include="Assets\Scripts\GUI\ComponentPicker.uxml" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
