--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,7 +57,6 @@
      <Compile Include="Assets\Scripts\GUI\TargetPanel.cs" />
      <Compile Include="Assets\Scripts\TreeBreakable.cs" />
      <Compile Include="Assets\Scripts\SkillsProvider.cs" />
-     <Compile Include="Assets\Scripts\Skills\IScalarPower.cs" />
      <Compile Include="Assets\Scripts\Skills\Power\DurabilityPower.cs" />
      <Compile Include="Assets\Scripts\Skills\Power\VolumePower.cs" />
      <Compile Include="Assets\Scripts\Skills\Power\FuelPower.cs" />
@@ -66,16 +65,28 @@
      <Compile Include="Assets\Scripts\Skills\Power\MassPower.cs" />
      <Compile Include="Assets\Scripts\Skills\Power\TemperaturePower.cs" />
      <Compile Include="Assets\Scripts\Properties\interface\IScalarProperty.cs" />
-     <Compile Include="Assets\Scripts\Skills\IMassSkill.cs" />
      <Compile Include="Assets\Scripts\Skills\CategorizedSkills.cs" />
      <Compile Include="Assets\Scripts\Skills\ScalarSkill.cs" />
      <Compile Include="Assets\Scripts\GUI\VisualAssetRegistry.cs" />
      <Compile Include="Assets\Scripts\GUI\ScalarSkillController.cs" />
-     <None Include="Assets\Scripts\GUI\TargetPanel.uss" />
-     <None Include="Assets\Scripts\GUI\TargetPanel.uxml" />
+     <Compile Include="Assets\Scripts\Properties\interface\IMassProperty.cs" />
+     <Compile Include="Assets\Scripts\Properties\interface\IVectorProperty.cs" />
+     <Compile Include="Assets\Scripts\Skills\interface\IScalarPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\interface\IMassPower.cs" />
+     <Compile Include="Assets\Scripts\Skills\MassSkill.cs" />
+     <Compile Include="Assets\Scripts\Skills\VectorSkill.cs" />
+     <Compile Include="Assets\Scripts\Skills\interface\IVectorPower.cs" />
+     <Compile Include="Assets\Scripts\GUI\MassSkillController.cs" />
+     <Compile Include="Assets\Scripts\GUI\VectorSkillController.cs" />
+     <Compile Include="Assets\Scripts\GUI\IUpdatebleController.cs" />
+     <Compile Include="Assets\Scripts\Properties\Volume.cs" />
+     <None Include="Assets\Scripts\GUI\Layout\TargetPanel.uss" />
+     <None Include="Assets\Scripts\GUI\Layout\TargetPanel.uxml" />
+     <None Include="Assets\Scripts\GUI\Layout\MassComponentController.uxml" />
      <None Include="Assets\UI Toolkit\Sprites\EmojiOne Attribution.txt" />
-     <None Include="Assets\Scripts\GUI\ScalarComponentController.uxml" />
-     <None Include="Assets\Scripts\GUI\ComponentPicker.uxml" />
+     <None Include="Assets\Scripts\GUI\Layout\VectorComponentController.uxml" />
+     <None Include="Assets\Scripts\GUI\Layout\ScalarComponentController.uxml" />
+     <None Include="Assets\Scripts\GUI\Layout\ComponentPicker.uxml" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2020.2.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
